<resources>
    <string name="app_name">NemoHachi</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="anuncios">Anuncios</string>
    <string name="adopcion">Adopción</string>
    <string name="perdidos">Perdidos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adoption_text_view">¿Qué te gustaría adoptar?</string>
    <string name="dog_button">Perro</string>
    <string name="cat_button">Gato</string>
    <string name="other_button">Otros</string>
    <string name="register_form">Crear cuenta con:</string>
    <string name="facebook_button">Facebook</string>
    <string name="twitter_button">Twitter</string>
    <string name="google_button">Google</string>
    <string name="email">Correo electrónico</string>
    <string name="required_field">*Campo obligatorio</string>
    <string name="password">Contraseña</string>
    <string name="rep_password">Repita la contraseña</string>
    <string name="register_button">Publicar</string>
    <string name="o">o</string>
    <string name="log_in_with">Iniciar sesión con:</string>
    <string name="access_button">Acceder</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="create_an_account_button">Crear cuenta</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="action_settings">Configuración</string>
    <string name="action_profile">Perfil</string>
    <string name="action_language">Idioma</string>
    <string name="action_notification">Notificaciones</string>
    <string name="action_help">Ayuda</string>
    <string name="action_signout">Cerrar sesión</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="name">Nombre</string>
    <string name="description_text_view">Descripción</string>
    <string name="time">Hora</string>
    <string name="change_password">Cambiar la contraseña</string>
    <string name="delete_button">Eliminar la cuenta</string>
    <string name="change_name">Cambiar el nombre</string>
    <string name="accept_button">Aceptar</string>
    <string name="select_language">Seleccione el idioma:</string>
    <string name="english_language">Inglés</string>
    <string name="german_language">Alemán</string>
    <string name="french_language">Francés</string>
    <string name="portuguese_language">Portugués</string>
    <string name="spanish_language">Español</string>
    <string name="italian_language">Italiano</string>
    <string name="vibration_mode">Modo vibrador</string>
    <string name="change_tone">Chambiar tono</string>
    <string name="remove_notifications">Quitar notificaciones\n</string>
    <string name="save_changes">Guardar cambios</string>
    <string name="email_address">Correo</string>
    <string name="cat_pet">Gato</string>
    <string name="dog_pet">Perro</string>
    <string name="other_pet">Otros</string>
    <string name="pet_select">Selecciona el tipo de mascota</string>
    <string name="comment">Comentario</string>
    <string name="pet_name">Nombre de tu mascota</string>
    <string name="city_name">ciudad</string>
    <string name="location_status">Estado de la ubicación</string>
    <string name="city">Ciudad</string>
    <string name="add_comment">Comentar</string>
    <string name="pet_type">Tipo de mascota</string>
    <string name="like">Me gusta</string>
    <string name="adoption_status">Estado de la adopción</string>
    <string name="comments">Comentar</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="help_center_text">Centro de ayuda</string>
    <string name="privacy_politics">Términos y políticas de privacidad</string>
    <string name="contact_us_text"> Contáctenos en: </string>
    <string name="cell_phone_number_text">+57 3116789403</string>
    <string name="address_text">Calle 34 #67-33</string>
    <string name="email_text">nemohachi@gmail.com</string>


</resources>