<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ui.signup.SignUpActivity">



        <ImageView
            android:id="@+id/logo_image_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@null" />



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_text_input_layaout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="@string/required_field"
            app:startIconDrawable="@drawable/ic_launcher_foreground">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/name"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/city_text_input_layaout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="@string/required_field"
            app:startIconDrawable="@drawable/baseline_location_city_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/city_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/city"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input_layaout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="@string/required_field"
            app:startIconDrawable="@drawable/ic_email">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/comment_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/comment"
                android:inputType="textMultiLine"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/or_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pet_select"
            android:textAlignment="center"
            android:textColor="#345E00"
            android:textSize="20sp"
            android:textStyle="bold"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cat_check_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cat_pet"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <CheckBox
                android:id="@+id/dog_check_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dog_pet"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <CheckBox
                android:id="@+id/other_check_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/other_pet"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </LinearLayout>

        <Button
            android:id="@+id/register_button"
            android:layout_width="190dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/register_button"
            android:textAllCaps="false"
            android:textColor="@color/purple_700"
            android:textColorHint="@color/purple_500"
            android:textStyle="bold" />




    </LinearLayout>
</ScrollView>