<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ui.signup.SignUpActivity">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/change_tone"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/vibration_mode"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold" />



        <Switch
            android:id="@+id/switch2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/remove_notifications"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/save_changes"
            android:layout_width="218dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/save_changes"
            android:textAllCaps="false"
            android:textColor="@color/purple_700"
            android:textColorHint="@color/purple_500"
            android:textSize="18dp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>